tests/ui/const-generics/mgca/selftyalias-containing-param.stderr
error: generic `Self` types are currently not permitted in anonymous constants
  --> $DIR/selftyalias-containing-param.rs:7:37
   |
LL |     fn foo() -> [(); const { let _: Self = loop {}; 1 }] {
   |                                     ^^^^
   |
note: not a concrete type
  --> $DIR/selftyalias-containing-param.rs:6:22
   |
LL | impl<const N: usize> S<N> {
   |                      ^^^^
   = help: add `#![feature(opaque_generic_const_args)]` to allow generic expressions as the RHS of const items

error: aborting due to 1 previous error

